kubernetes/main/apps/security/anubis/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: anubis
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: anubis
  ingress:
    # forwardAuth from both traefik instances
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
